--- a/src/app/home.html
+++ b/src/app/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento - Filipe e [Nome da Noiva]</title>
-    <link rel="../style/home.css" href="styles.css">
+    <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body>
     <!-- Seção de Confirmação -->
