--- a/src/app/home.html
+++ b/src/app/home.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body>
+    <div class="navbar">
+        <a href="#confirmacao"><i class="fa fa-check-circle"></i><span>Confirmação</span></a>
+        <a href="#presentes"><i class="fa fa-gift"></i><span>Presentes</span></a>
+        <a href="#localizacao"><i class="fa fa-map-marker"></i><span>Local</span></a>
+        <a href="#dress-code"><i class="fa fa-user"></i><span>Dress Code</span></a>
+        <a href="#recados"><i class="fa fa-envelope"></i><span>Recados</span></a>
+    </div>
+    
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
         <h1>Confirme sua Presença</h1>
