--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -121,3 +121,32 @@ section {
     justify-content: center;
     align-items: center;
 }
+
+/* Mapa Google Maps */
+.map-container {
+    text-align: center;
+    margin-top: 20px;
+    width: 100%; /* O container do mapa ocupa 100% da largura */
+    max-width: 100%; /* Evita que o container ultrapasse a tela */
+    overflow: hidden; /* Garante que nenhum conteúdo extra cause scroll */
+}
+
+.map-container iframe {
+    width: 100%; /* O iframe (mapa) se ajusta à largura da tela */
+    height: 300px; /* Altura do mapa ajustada para telas menores */
+    border: none;
+    display: block;
+}
+
+/* Para garantir que o mapa seja responsivo em diferentes tamanhos de tela */
+@media only screen and (max-width: 768px) {
+    .map-container iframe {
+        height: 250px; /* Ajusta a altura para telas menores */
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .map-container iframe {
+        height: 200px; /* Reduz ainda mais a altura para telas muito pequenas */
+    }
+}
