--- a/src/app/home.html
+++ b/src/app/home.html
@@ -38,7 +38,15 @@
             <button onclick="abrir3D()">Ver Local em 3D</button>
         </div>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.2142073053246!2d-49.31157262374868!3d-28.74302077215591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95217e5c8a3361db%3A0xdfe76446e8196b79!2sKiosque%20DIGO%20E%20MONI%20Eventos%20%26%20Buffet!5e0!3m2!1spt-BR!2sbr!4v1725598397495!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.2142073053246!2d-49.31157262374868!3d-28.74302077215591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95217e5c8a3361db%3A0xdfe76446e8196b79!2sKiosque%20DIGO%20E%20MONI%20Eventos%20%26%20Buffet!5e0!3m2!1spt-BR!2sbr!4v1725598397495!5m2!1spt-BR!2sbr"
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </section>
 
