--- a/src/app/home.html
+++ b/src/app/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casamento - Filipe e [Nome da Noiva]</title>
+    <title>Casamento - Nathielly e Filipe</title>
     <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
-        <h1>Confirme sua Presença</h1>
+        <h1>Confirme sua Presença aaa</h1>
         <form id="rsvp-form">
             <input type="text" id="nome" placeholder="Seu nome" required>
             <button type="button" onclick="confirmarPresenca()">Confirmar Presença</button>
