--- a/src/app/home.html
+++ b/src/app/home.html
@@ -17,7 +17,7 @@
     
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
-        <h1>Confirme sua Presença aaa</h1>
+        <h1>Confirme sua Presença aaaa</h1>
         <form id="rsvp-form">
             <input type="text" id="nome" placeholder="Seu nome" required>
             <button type="button" onclick="confirmarPresenca()">Confirmar Presença</button>
