--- a/src/app/home.html
+++ b/src/app/home.html
@@ -18,10 +18,10 @@
 
 <body>
     <!-- Notificação de Cookies -->
-    <div id="cookie-banner" class="cookie-banner">
+    <!-- <div id="cookie-banner" class="cookie-banner">
         <p>Este site usa cookies para melhorar sua experiência. <a href="#">Saiba mais</a>.</p>
         <button id="accept-cookies">Aceitar</button>
-    </div>
+    </div> -->
 
     <!-- Barra de Navegação Fixa -->
     <div class="navbar">
