--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -128,11 +128,43 @@ a {
     margin-top: 50px; /* Espaçamento entre o convite e as seções */
 }
 
-/* Media query para telas menores, como celulares */
+/* Media query para telas menores que 768px */
+@media only screen and (max-width: 768px) {
+    .content {
+        width: 90%;
+        padding: 15px;
+    }
+
+    .title {
+        font-size: 5rem;
+    }
+
+    .subtitle {
+        font-size: 1rem;
+    }
+
+    .date {
+        font-size: 2rem;
+    }
+
+    .button {
+        font-size: 4rem;
+        padding: 15px 25px;
+    }
+
+    .button i {
+        font-size: 6rem;
+    }
+
+    .footer-img {
+        height: 150px;
+    }
+}
+
+/* Media query para telas menores que 500px */
 @media only screen and (max-width: 500px) {
     .content {
         width: 80%;
-        margin-bottom: 0px;
         max-height: 50vh;
     }
 
@@ -148,13 +180,13 @@ a {
         font-size: 2rem;
     }
 
-    .button i {
-        font-size: 5rem;
-    }
-
     .button {
         font-size: 3rem;
         padding: 10px 20px;
+    }
+
+    .button i {
+        font-size: 5rem;
     }
 
     .footer-img {
@@ -162,3 +194,37 @@ a {
         opacity: 0.8;
     }
 }
+
+/* Media query para telas menores que 400px */
+@media only screen and (max-width: 400px) {
+    .content {
+        width: 95%;
+        padding: 10px;
+    }
+
+    .title {
+        font-size: 1.8rem;
+    }
+
+    .subtitle {
+        font-size: 0.5rem;
+    }
+
+    .date {
+        font-size: 1.8rem;
+    }
+
+    .button {
+        font-size: 2.5rem;
+        padding: 8px 16px;
+    }
+
+    .button i {
+        font-size: 4.5rem;
+    }
+
+    .footer-img {
+        height: 85px;
+    }
+}
+
