criado arquivos para a animação

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/scroll.css">
     <link rel="stylesheet" href="styles/cronometro.css">
+    <link rel="stylesheet" href="styles/nf-animacao.css">
     <link rel="stylesheet" href="styles/confirmacao.css">
     <link rel="stylesheet" href="styles/presente.css">
     <link rel="stylesheet" href="styles/mapa.css">
@@ -67,8 +68,8 @@
                 Mal podemos esperar para celebrar esse momento especial com você!
             </p>
         </div>
+     
     </section>
-
 
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
@@ -180,6 +181,7 @@
     </a>
 
     <script src="scripts/cronometro.js"></script>
+    <script src="scripts/nf-animacao.js"></script>
     <script src="scripts/presenca.js"></script>
     <script src="scripts/produtos.js"></script>
     <script src="scripts/cookies.js"></script>
