--- a/src/app/styles/nf-animacao.css
+++ b/src/app/styles/nf-animacao.css
@@ -54,8 +54,7 @@
     width: 100px;
     height: 100px;
     background-color: #556b2f; /* Verde oliva */
-    transform: rotate(-45deg);
-    transform-origin: center center;
+    transform: translate(-50%, -50%);
     animation: beat 1s infinite;
     z-index: 1; /* Fica atrás das letras */
 }
@@ -85,13 +84,13 @@
 /* Animação de batimento do coração */
 @keyframes beat {
     0% {
-        transform: scale(1) rotate(-45deg);
+        transform: scale(1);
     }
     50% {
-        transform: scale(0.9) rotate(-45deg);
+        transform: scale(0.9);
     }
     100% {
-        transform: scale(1) rotate(-45deg);
+        transform: scale(1);
     }
 }
 
