--- a/src/app/styles/presente.css
+++ b/src/app/styles/presente.css
@@ -91,10 +91,35 @@ button, .botao-presente {
     justify-content: center;
     text-align: center;
     gap: 8px;
+    text-decoration: none;
 }
 
 button i, .botao-presente i {
     font-size: 18px;
+}
+
+
+/* Estilos para o toast da seção de compras (PIX) */
+.pix-toast {
+    visibility: hidden;
+    min-width: 250px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.5s, visibility 0.5s;
+}
+
+.pix-toast.show {
+    visibility: visible;
+    opacity: 1;
 }
 
 #localizacao {
