--- a/src/app/home.html
+++ b/src/app/home.html
@@ -118,7 +118,7 @@
         <h1>Nossa Lista de Presentes</h1>
         <p>Aqui você pode nos presentear, tanto no Magalu quanto aqui nos fazendo PIX. <strong>Se for comprar fora
                 desses sites, por favor nos avise.</strong></p>
-        <a href="https://www.querodecasamento.com.br/painel-de-controle/home" target="_blank" class="botao-presente">Compre na Magalu</a>
+        <a href="https://m.querodecasamento.com.br/lista-de-casamento/filipe-querino-nathielly-jorge/rsvp" target="_blank" class="botao-presente">Compre na Magalu</a>
 
         <div id="product-list" class="produtos-lista">
             <!-- Os produtos do JSON serão carregados aqui dinamicamente -->
