ajuste na img do casal

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -62,16 +62,19 @@
         <!-- Texto moderno e simplificado -->
         <div class="texto-cronometro">
             <p>
-                Estamos muito felizes em compartilhar os detalhes do nosso grande dia com você! Aqui você encontrará todas as informações sobre hospedagem, salão de beleza, trajes e estacionamento. Tudo para que você se prepare da melhor forma.
+                Aqui você encontrará todas as informações sobre local, presentes e trajes. Tudo para que você se prepare da melhor forma.
             </p>
             <p>
                 Mal podemos esperar para celebrar esse momento especial com você!
             </p>
-        </div>       
+        </div>    
     </section>
 
     <!-- Seção de Animação N e F -->
     <section id="nf-animacao">
+        <div class="foto-casal">
+            <img src="assets/casal.jpg" alt="CASAL" width="400" height="auto">
+        </div>
         <div class="animacao-container">
             <div class="letras">
                 <span class="letra-n">N</span>
