--- a/src/app/styles/nf-animacao.css
+++ b/src/app/styles/nf-animacao.css
@@ -4,11 +4,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 20vh; /* Ocupa toda a altura da tela */
+    height: 80vh; /* Ocupa toda a altura da tela */
     background-color: #fff;
     text-align: center;
     padding: 50px 0;
     position: relative;
+}
+
+/* Foto do casal */
+.foto-casal {
+    margin-bottom: 20px; /* Espaço abaixo da foto do casal */
 }
 
 /* Animação das letras "N" e "F" */
@@ -18,9 +23,11 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; /* Espaço entre as letras e o conteúdo abaixo */
+    margin-top: 20px; /* Espaço acima das letras (entre a foto e as letras) */
 }
 
+/* Letras */
 .letras {
     font-family: 'Playfair Display', serif;
     font-size: 80px;
@@ -43,23 +50,11 @@
     animation-delay: 1s;
 }
 
-
 /* Animações */
 @keyframes aparecer {
     to {
         opacity: 1;
         transform: translateY(0);
-    }
-}
-
-@keyframes formarCoracao {
-    0% {
-        transform: translate(-50%, -50%) scale(0); /* Pequeno no início */
-        opacity: 0;
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(1); /* Tamanho final do coração */
-        opacity: 1;
     }
 }
 
