--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento de Nathielly e Filipe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,11 @@
 
 <body>
     <div class="content">
-        <p class="versiculo"></p>
+        <p class="versiculo">Nem muitas águas conseguem apagar o amor; os rios não conseguem levá-lo
+            na correnteza. Se alguém oferecesse todas as riquezas
+            da sua casa para adquirir o amor, seria totalmente desprezado.
+        </p>
+        <p class="versiculo-numero">Cânticos dos Cânticos 8:9</p>
         <h1 class="title">Nathielly e Filipe</h1>
         <p class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</p>
         <p class="date">08 • 03 • 25</p>
