adicionado novo estilo

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -169,7 +169,7 @@
         
         <div class="galeria">
             <img src="assets/estilo-1.jpeg" alt="Look 1 - Estilo Social para Casamento">
-            <img src="assets/estilo-2.jpeg" alt="Look 2 - Estilo Social para Casamento">
+            <img src="assets/estilo-2.jpg" alt="Look 2 - Estilo Social para Casamento">
         </div>
     </section>
 
