ajustado local do casamento

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -141,13 +141,13 @@
     <!-- Seção Localização -->
     <section id="localizacao">
         <h1>Veja Onde Vamos Dizer Sim</h1>
-        <p>Estamos muito animados para compartilhar este momento especial com você. O casamento será realizado em um
+        <p>O casamento será realizado em um
             local incrível, e você pode conferir os detalhes abaixo.</p>
 
         <div class="botoes-local">
-            <button onclick="abrirMaps()">
+            <a href="https://maps.app.goo.gl/b7cnfPo5hweQuYpPA" target="_blank" class="botao-local">
                 <i class="fa fa-map-marker"></i> Abrir no Google Maps
-            </button>
+            </a>
             <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="botao-local">
                 <i class="fa fa-street-view"></i> Ver Local em 3D
             </a>
