--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -131,7 +131,7 @@ a {
 .versiculo {
     font-family: "Tangerine", cursive;
     font-size: 2rem;
-    color: rgba(48, 63, 22, 0.8);
+    color: rgb(48, 63, 22);
     font-weight: 700;
     /* margin: 40px 0 20px 0; Aumenta a margem superior */
     line-height: 1.4;
@@ -141,7 +141,7 @@ a {
 .versiculo-numero {
     font-family: "Montserrat", sans-serif;
     font-size: 1rem;
-    color: rgba(48, 63, 22, 0.6);
+    color: rgb(48, 63, 22);
     font-style: italic;
     margin-bottom: 25px;
 }
