--- a/src/app/styles/nf-animacao.css
+++ b/src/app/styles/nf-animacao.css
@@ -61,7 +61,7 @@
     font-size: 2rem;
     color: rgb(48, 63, 22);
     font-weight: 700;
-    /* margin: 40px 0 20px 0; Aumenta a margem superior */
+    /* margin: 40px 0 20px 0;*/
     line-height: 1.4;
     /* padding: 0 15px; Adiciona espaçamento para telas menores */
 }
