--- a/src/app/home.html
+++ b/src/app/home.html
@@ -62,10 +62,7 @@
         <!-- Texto moderno e simplificado -->
         <div class="texto-cronometro">
             <p>
-                Aqui você encontrará todas as informações sobre local, presentes e trajes. Tudo para que você se prepare da melhor forma.
-            </p>
-            <p>
-                Mal podemos esperar para celebrar esse momento especial com você!
+                Estamos muito felizes em poder celebrar esse momento especial com você! Para você se preparar da melhor forma possível para esse dia, aqui você encontrará todas as informações sobre localização, lista de presentes e dress code.
             </p>
         </div>    
     </section>
@@ -91,9 +88,9 @@
     <!-- Seção de Confirmação -->
     <section id="confirmacao">
         <h1>Confirme sua Presença</h1>
-        <p>Estamos contando os dias para este grande momento, e sua presença é muito importante para nós! Por favor,
-            confirme se você vai poder comparecer para garantirmos que teremos cadeiras, comida, e alegria suficientes
-            para todos!</p>
+        <p>Estamos contando os dias para este grande momento, e sua presença é muito importante para nós! 
+            Por favor, confirme se conseguirá comparecer para garantirmos que teremos tudo excelente para lhe receber neste dia especial.
+        </p>
 
             <form id="rsvp-form">
                 <input type="text" id="name" placeholder="Seu nome" required>
