--- a/src/app/styles/dress-code.css
+++ b/src/app/styles/dress-code.css
@@ -12,7 +12,7 @@
 #dress-code h1 {
     font-size: 28px;
     font-weight: 600;
-    color: #333;
+    color: rgb(48, 63, 22);
     margin-bottom: 20px;
 }
 
